added kitten pic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   Hello world - John github practice
   <br>
   Good bye world
+  <img src="kittenpic.jpg" height=200 width=200>
   <script src="script.js"></script>
 </body>
 
