added redkitten pic

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <br>
   Good bye world
   <img src="kittenpic.jpg" height=200 width=200>
+  <br>
+  <img src="redkitten.jpg" height=200 width=200>
   <script src="script.js"></script>
 </body>
 
