added 3rd kitten picture

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <img src="kittenpic.jpg" height=200 width=200>
   <br>
   <img src="redkitten.jpg" height=200 width=200>
+  <br>
+  <img src="kitten3.jpg" height=200 width=200>
   <script src="script.js"></script>
 </body>
 
